# ember

./: .gitignore  Cargo.toml  ember.code-workspace  ember_workspace.code-workspace  notes.md
.github/workflows/: rust.yml
src/: bin.rs  lib.rs  main.rs
src/core/: mod.rs
src/core/application/: application_manager.rs  application_states.rs  mod.rs  profiler.rs
src/core/events/: event.rs  event_manager.rs  menu_messages.rs  mod.rs  project_events.rs  scene_manager_messages.rs  serialization_events.rs  terrain_events.rs
src/core/input/: input_manager.rs
src/core/managers/: input_manager.rs  manager.rs  mod.rs  physics_manager.rs  plugin_manager.rs  render_manager.rs  scene_manager.rs
src/core/physics/: mod.rs  physics_manager.rs  physics_system.rs
src/core/plugins/: mod.rs  plugin.rs
src/core/plugins/components/: camera_component.rs  command_buffer_builder_component.rs  debug_ui_component.rs  egui_component.rs  geometry_component.rs  input_component.rs  light_components.rs  mod.rs  renderable_component.rs  serializer_component.rs  terrain_component.rs  transform_component.rs  velocity_component.rs
src/core/plugins/components/ui/: app_interface_flag.rs  main_menu_component.rs  mod.rs  scene_graph_component.rs
src/core/rendering/: ambient_lighting.rs  context.rs  directional_lighting.rs  frame_handler.rs  mod.rs  point_lighting.rs  render_manager.rs  render_system.rs  scene_state.rs  triangle_draw.rs  win_64_window.rs
src/core/rendering/geometries/: cube.rs  geometry.rs  geometry_primitives.rs  mod.rs  plane.rs  terrain.rs  triangle.rs
src/core/rendering/renderables/: renderable.rs  triangle.rs
src/core/rendering/shaders/: mod.rs
src/core/rendering/shaders/ambient_lighting/: fs.rs  (+3 more)
src/core/scene/: dynamic_scene.rs  dynamic_scene_builder.rs  mod.rs  scene.rs  scene_macros.rs  scene_manager.rs  serialization.rs  system_dispatch.rs
src/core/systems/: camera_init_system.rs  engine_init_systems.rs  geometry_init.rs  input_systems.rs  mod.rs  project_systems.rs  render_systems.rs  serialization_systems.rs  system.rs  terrain_systems.rs  ui_systems.rs  update_systems.rs
src/math/structures/: mod.rs  tensor.rs  vector.rs
src/systems/: application.rs  events.rs  mod.rs  rendering.rs
src/systems/application/: application_manager.rs
src/systems/core/: system.rs
src/systems/events/: event.rs  event_system.rs  observer.rs
src/systems/physics/: mod.rs  physics_system.rs
src/systems/rendering/: context.rs  mod.rs  render_system.rs  win_64_window.rs  window.rs
src/systems/rendering/geometries/: triangle.rs
src/systems/rendering/renderables/: mod.rs  triangle.rs
(+16 files in other folders)
