[package]
name = "leaf"
version = "0.1.0"
authors = ["Vail Dorchester <vail.dorchester@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = {version = "*", features = ["specs-derive"] }
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
vulkano = "0.29"
vulkano-shaders = "0.29"
vulkano-win = "0.29"
egui = "0.17"
egui-winit = "0.17"
egui_vulkano = "0.7"
winit = "0.26.1"
simple_logger = "*"
log = {version = "*"}#, features = ["max_level_error", "release_max_level_error"]}
# euler = "*"
cgmath = "0.18"
