[package]
name = "leaf"
version = "0.2.0"
authors = ["Vail Dorchester <vail.dorchester@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ember"
path = "src/lib.rs"

[[bin]]
name = "ember"
path = "src/bin.rs"

[dependencies]
serde = {version = "1", features=["derive"]}
ron = "0.8"
bevy_ecs = "0.9.1"
bevy_reflect = "0.9.1"
bevy_hierarchy = "0.9.1"
bevy_utils = "0.9.1"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
vulkano = "0.32.2"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
egui = "0.20.1"
egui-winit = "0.20.1"
egui_vulkano = {path="../egui_vulkano"}
puffin = "0.13.1"
puffin_egui = "0.14"
winit = "0.27.0"
noise = "0.7"
simple_logger = "*"
log = {version = "*"}#, features = ["max_level_error", "release_max_level_error"]}
ember_math = {path="../ember_math"}
rfd = "0.8.2"
thiserror = "1"
libloading = "0.7.4"
errors = "0.0.0"
